--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
   - docker run -e CI=true nicholasjdefina/react-test npm run test
 
 after_success:
-  - docker build -t nicholasjdefina/multi-client -f ./client
-  - docker build -t nicholasjdefina/multi-nginx -f ./nginx
-  - docker build -t nicholasjdefina/multi-server -f ./server
-  - docker build -t nicholasjdefina/multi-worker -f ./worker
+  - docker build -t nicholasjdefina/multi-client ./client
+  - docker build -t nicholasjdefina/multi-nginx ./nginx
+  - docker build -t nicholasjdefina/multi-server ./server
+  - docker build -t nicholasjdefina/multi-worker ./worker
   # log in to docker CLI. echo retrieves then emits to next side of pipe
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # push to dockerhub
